--- a/src/pages/Header/Header.css
+++ b/src/pages/Header/Header.css
@@ -289,3 +289,24 @@ body {
 
 
 }
+
+
+@media (max-width: 450px) {
+
+    .phone-box {
+        margin-top: 5px;
+        width: 100px;
+        /* This can also be set in percentages or vw for responsiveness */
+        overflow: hidden;
+        position: relative;
+        background-color: #ffffff45;
+        border-radius: 15px;
+        color: #000649;
+        border: 1px solid #000649;
+        font-size: 10px;
+    }
+
+    
+
+
+}
