--- a/src/pages/landing_page/Hexagon/Hexagon.css
+++ b/src/pages/landing_page/Hexagon/Hexagon.css
@@ -9,11 +9,11 @@
   
   .hexagon.center {
     z-index: 1; /* Ensures the center hexagon is above the others */
+    font: 1px;
 
   }
-  
   .hexagon {
-    background-color: #000947;
+    background-color: #000947; /* Set width */
     width: 93px; /* Set width */
     height: 100px; /* Set height to maintain hexagon shape */
     display: flex;
@@ -22,10 +22,11 @@
     position: absolute;
     top: 50%;
     left: 50%;
-    margin-top: -55px; /* Half of the height */
-    margin-left: -50px; /* Half of the width */
+    margin-top: -50px; /* Adjust margin-top to be half of height */
+    margin-left: -46.5px; /* Adjust margin-left to be half of width */
     clip-path: polygon(50% 0%, 100% 25%, 100% 75%, 50% 100%, 0% 75%, 0% 25%);
-  }
+}
+
   
   .hexagon-text {
     color: white;
@@ -106,3 +107,18 @@
       }
   }
   
+
+  .hexagon-inner {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.hexagon-text {
+    color: white;
+    font-size: 10px; /* Adjust size as needed */
+    text-align: center; /* Ensures text is centered horizontally if not in a flex context */
+    width: 100%; /* Ensures text spans the full width of its container */
+}
