--- a/src/pages/landing_page/LandingPage.css
+++ b/src/pages/landing_page/LandingPage.css
@@ -228,13 +228,16 @@
   /* Centers text lines */
   border-radius: 25px;
   margin-top: 100px;
-  font-size: 20px;
   position: relative;
   margin: 15px;
-  font-size: 0.8em;
+  height: 230px;
   margin-top: 100px;
 
 
+}
+.left-text p {
+  font-size: 13px;
+  padding: 2px;
 }
 
 .first-comp .right-text {
@@ -270,6 +273,7 @@
   z-index: 10;
   /* Ensure it's above the hexagons */
   animation: fadeIn 1.5s ease-in-out forwards;
+  font-size: 20px;
 
 }
 
